Fixed the dark mode not going to the bottom!

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 	background: var(--highlight-color);
 	color: var(--text);
 }
-
+main {min-height: 100vh}
 * {
 	padding: 0;
 	margin: 0;
@@ -55,6 +55,7 @@
 body {
 	font-family: "Raleway", sans-serif;
 	overflow: overlay;
+  min-height: 100vh !important;
 }
 
 p {
